tdf#99722 sw: silly performance issue when firing a11y events

SwAccessibleEventList_Impl::MoveInvalidXAccToEnd() pointlessly copies every
single element when iterating over the list and then deletes the copy again
(which is expensive due to the WeakReference member).

This speeds up loading the first 500 pages of the bugdoc from 4:20 to
1:37 in a Linux dbgutil build.

(regression from 76c549eb01dcb7b5bf28a271ce00e386f3d388ba)

Change-Id: I7c7299e5e82095f5a51f395bc5076ca899b59f81